<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.DiscoverActivity">

    <item
        android:id="@+id/action_settings"
        android:title="Settings"
        app:showAsAction="never"
    />

    <item
        android:id="@+id/action_logout"
        android:title="Logout"
        app:showAsAction="never"
        />

</menu>